--- a/PiscineReloaded/Makefile
+++ b/PiscineReloaded/Makefile
@@ -6,7 +6,7 @@
 #    By: amaitre <amaitre@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/11/25 12:19:31 by amaitre           #+#    #+#              #
-#    Updated: 2016/11/07 20:35:06 by amaitre          ###   ########.fr        #
+#    Updated: 2016/11/13 21:49:03 by amaitre          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,6 +15,7 @@ NAME		=	Corr_PR
 SRC			=	src/main.c
 SRC			+=	src/test0.c
 SRC			+=	src/test1.c
+SRC			+=	src/test2.c
 
 SRCO		=	$(SRC:.c=.o)
 HEADERSLIB	=	libftprintf/includes
@@ -26,7 +27,7 @@ all: $(NAME)
 
 re: fclean all
 
-%.o: %.c
+%.o: %.c $(HEADERS)/Corr_PR.h
 	@echo "\033[32mCorr_PS :\033[0m [Compilation:\033[33m $@\033[0m]"
 	@$(CC) -o $@ -c $< $(CFLAGS) -I $(HEADERSLIB) -I $(HEADERS)
 
@@ -34,7 +35,7 @@ $(NAME): $(SRCO)
 	@make -C libftprintf/
 	@$(CC)  $(CFLAGS) -o $@ $^ libftprintf/libftprintf.a
 	@echo "[\033[32m--------------------------\033[0m]"
-	@echo "[\033[36m------ OK - Corr_PR -------\033[0m]"
+	@echo "[\033[36m------ OK - Corr_PR ------\033[0m]"
 	@echo "[\033[32m--------------------------\033[0m]"
 	@echo "\033[32muse: ./$(NAME)\033[0m"
 
